--- a/quiz.html
+++ b/quiz.html
@@ -13,7 +13,7 @@
 
 	<nav class="navbar">
         <ul>
-          <li><a href="ada.html">Biografia</a></li>
+          <li><a href="index.html">Biografia</a></li>
           <li><a href="quiz.html">Quiz</a></li>
         </ul>
     </nav>
