--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <h1 class="title">Ada Lovelace</h1> 
         <div id="div1" style="text-align: center;">
-        <img src="imagens/ada-lovelace.jpg" alt="Ada Lovelace">
+        <img src="imagens/ada-lovelace.jpg" alt="Ada Lovelace" style="max-width: 100%; height: auto;">
         </div>
 
         <div id="div2">
