--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     Flyology, traduzido como “Estudo do Voo”.</p>
     
         <div id="div3" style="text-align: center;">
-        <img src="imagens/flyology.jpg" alt="Flyology">
+        <img src="imagens/flyology.jpg" alt="Flyology" style="max-width: 100%; height: auto;">
         </div> 
 
     <p>Por ter criado fascínio por matemática e lógica, na juventude, conheceu Mary Sommerville. Também matemática
@@ -68,7 +68,7 @@
     Charles Babbage.</p>
             
         <div id="div4" style="text-align: center;">
-        <img src="imagens/máquina analítica.jpg" alt="Máquina Analítica">
+        <img src="imagens/máquina analítica.jpg" alt="Máquina Analítica" style="max-width: 100%; height: auto;">
         </div> 
 
     <p>Além de realizar a tradução do artigo, ela complementou o artigo com notas de sua própria autoria fazendo
@@ -89,7 +89,7 @@
     milhares de libras.</p>
 
         <div id="div5" style="text-align: center;">
-        <img src="imagens/jogadora.jpg" alt="Jogadora Compulsiva">
+        <img src="imagens/jogadora.jpg" alt="Jogadora Compulsiva" style="max-width: 100%; height: auto;">
         </div> 
 
     <p>Ada casou-se em 1935, aos 20 anos com William Lord King, tornando-se Lady Lovelace em 1838. A Lady chegou a 
