--- a/index.html
+++ b/index.html
@@ -111,17 +111,17 @@
     </section>
 
     <div class="container-slider">
-        <button id="prev-button"><img src="imagens/prev.png" alt="prev-button"></button>
+        <button id="prev-button"><img src="imagens/prev.png" alt="prev-button" style="max-width: 100%; height: auto;"></button>
         <div class="container-images">
-          <img src="imagens/ada.jpg" alt="" class="slider on">
-          <img src="imagens/flyology.jpg" alt="" class="slider">
-          <img src="imagens/máquina analítica.jpg" alt="" class="slider">
-          <img src="imagens/máquina.jpg" alt="" class="slider">
-          <img src="imagens/jogadora.jpg" alt="" class="slider">
-          <img src="imagens/analítica.webp" alt="" class="slider">
-          <img src="imagens/ada-love.jpg" alt="" class="slider">
+          <img src="imagens/ada.jpg" alt="" class="slider on" style="max-width: 100%; height: auto;">
+          <img src="imagens/flyology.jpg" alt="" class="slider" style="max-width: 100%; height: auto;">
+          <img src="imagens/máquina analítica.jpg" alt="" class="slider" style="max-width: 100%; height: auto;">
+          <img src="imagens/máquina.jpg" alt="" class="slider" style="max-width: 100%; height: auto;">
+          <img src="imagens/jogadora.jpg" alt="" class="slider" style="max-width: 100%; height: auto;">
+          <img src="imagens/analítica.webp" alt="" class="slider" style="max-width: 100%; height: auto;">
+          <img src="imagens/ada-love.jpg" alt="" class="slider" style="max-width: 100%; height: auto;">
         </div>
-        <button id="next-button"><img src="imagens/next.png" alt="next-button"></button>
+        <button id="next-button"><img src="imagens/next.png" alt="next-button" style="max-width: 100%; height: auto;"></button>
       </div> 
 
     <div class="teste">
