--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div> 
 
     <p>Além de realizar a tradução do artigo, ela complementou o artigo com notas de sua própria autoria fazendo
-    o uso de elementos de sua fértil e poética imaginação para que conseguisse ampliar seua percepção sobre a
+    o uso de elementos de sua fértil e poética imaginação para que conseguisse ampliar sua percepção sobre a
     máquina. As anotações só foram republicadas cem anos depois de sua morte, o reconhecimento por seu trabalho
     fizeram-na ser referenciada como a primeira programadora da história. Alan Turing, conhecido como “pai da 
     computação moderna”, fez referência ao trabalho de Lovelace em suas pesquisas. Por fim, as atribuições ao 
